# rl_for_curobo

./: .gitattributes  .gitignore  .nfs0000000070530fb0000000dd  NvStreamer-20250801-232911.etli  NvStreamer-20250802-010514.etli  NvStreamer-20250802-011543.etli  NvStreamer-20250816-145743.etli  NvStreamer-20250816-152013.etli  NvStreamer-20250816-152045.etli  NvStreamer-20250816-152056.etli  NvStreamer-20250816-163432.etli  PYTHON_PATH_SETUP.md  World-_360_convoyor_scale02.usd  __init__.py  auto_import.py  commands.txt  current_packages.txt  ensure_isaac_sim.py  env_isaacsim_for_ros2.yml  env_isaacsim_ros2_base.yml  example_usage.py  f.austin  fix_cache_inside_docker.sh  import_rl_curobo.py  index.html  install_nvblox.sh  installation.txt  network_latency_test.py  plot_pos_error_statistics.py  pyrightconfig.json  python.sh  setup.py  setup_imports.py  setup_python_path.py  simple_plot_script.py  simulated_camera.py  simulated_realsense_mpc.py  test_particle_count.py  test_particles.py  tmp.py
.devcontainer/: README.md  devcontainer.json  setup_host.sh
.ssh/: config
curobo/: .gitignore
curobo/docker/: branching_image_guide.txt  isaac_sim.dockerfile  isaac_sim_45.dockerfile  isaac_sim_45v1.dockerfile  isaac_sim_45v1_deprecated.dockerfile  isaac_sim_45v2.dockerfile  setup_dev_env.sh  simple_setup.sh  start_apptrainer_isaac_sim45v5user.sh  start_docker_isaac_sim45.sh  start_docker_isaac_sim45root.sh  start_docker_isaac_sim45rootv2.sh  start_docker_isaac_sim45user.sh  start_docker_isaac_sim45v3.sh  start_docker_isaac_sim45v5.sh  start_docker_isaac_sim45v5user.sh  test_x11.sh
curobo/examples/: mpc_example_custom.py
docker/: .~lock.docker_images_control_table.csv#  dev_containers_vsc.md  docker_images_control_table.csv  ros2_docker_updating.md
docker/livestream/: readme.txt
generated_multi_arm_configs/: franka_4_arm.yml  kinova_5_arm.urdf  kinova_5_arm.yml  mixed_example.urdf  mixed_example.yml  particle_mpc_franka_4_arm.yml  particle_mpc_kinova_5_arm.yml  ur5e_3_arm.urdf  ur5e_3_arm.yml
install/: local_setup.sh  setup.sh
local_folder/: .collect.mapping.json  World1.usd
local_folder/SubUSDs/: franka.usd  panda_leftfinger.usd  panda_leftfinger_flex.usd  panda_rightfinger.usd  panda_rightfinger_flex.usd
log/: latest_build
projects_root/: K_ARM_EXTENSION_PLAN.md  autonomous_arm.py  autonomous_franka.py  setup.py  start_apptainer_isaac_sim.sh  test_transforms.py
projects_root/centralized_mpc_k_arms_planning/: readme_tutorial.md
projects_root/cluster/: busy_waiting.sh  display_connection.sh
projects_root/docker/: readme.txt
projects_root/examples/: 2_mpcs_avoidance_batch.py  README_IsaacSim_Testing.md  README_ROS2_MULTIROBOT.md  batch_mpc_example.py  cumotion_moving_obstacles.py  cumotion_no_obs_pred.py  cumotion_with_obs_pred.py  debug_3arm_mpc.py  dual_arm_centralized_franka_mpc.py  (+47 more)
projects_root/ros/workspaces/isaac_moveit/install/moveit2_isaac_sim_integration/share/moveit2_isaac_sim_integration/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
projects_root/ros/workspaces/isaac_moveit/install/moveit2_isaac_sim_integration/share/moveit2_isaac_sim_integration/cmake/: moveit2_isaac_sim_integrationConfig.cmake
projects_root/ros/workspaces/isaac_moveit/install/moveit2_isaac_sim_integration/share/moveit2_isaac_sim_integration/config/: robot_config.yaml
projects_root/ros/workspaces/isaac_moveit/src/moveit2_isaac_sim_integration/: CMakeLists.txt  README.md  install_dependencies.sh
projects_root/ros/workspaces/isaac_moveit/src/moveit2_isaac_sim_integration/config/: robot_config.yaml
projects_root/ros/workspaces/isaac_moveit/src/moveit2_isaac_sim_integration/config/moveit_configs_for_testing/auto_gen/panda_moveit_config_1752166865.8188095/: move_group_params.yaml
projects_root/ros/workspaces/isaac_moveit/src/moveit2_isaac_sim_integration/launch/: simulation_launch.py
projects_root/ros/workspaces/isaac_moveit/src/moveit2_isaac_sim_integration/scripts/: config_loader.py  moveit2_service_planner.py  moveit2_utils_runner.py  moveit_config_autogen.py  start_sim.py  test_integration.py
projects_root/ros/workspaces/isaac_moveit_old/isaac_moveit_pkg/: CMakeLists.txt  __init__.py  package.xml  readme.txt  setup.py
projects_root/ros/workspaces/isaac_moveit_old/isaac_moveit_pkg/config/: robot_agnostic_cfg.yaml
projects_root/ros/workspaces/isaac_moveit_old/isaac_moveit_pkg/resource/: isaac_moveit_pkg
projects_root/ros/workspaces/isaac_moveit_old/isaac_moveit_pkg/scripts/: launch_isaac.py
remote_development/: readme.txt  tmp
rl_for_curobo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rl_module/: mpc_example_with_moving_obstacle.py
start_here/: austin_guide.txt  installation.txt  manual_stats_austin.py  migration_from_4_to_4.5.txt_core_changes
test_generated_configs/: franka_3_arm.yml  franka_4_arm.urdf  franka_4_arm.yml  jaco_4_arm.urdf  jaco_4_arm.yml  kinova_2_arm.urdf  kinova_2_arm.yml  particle_mpc_franka_3_arm.yml  ur5e_3_arm.urdf
tests/: test_world_model_wrapper.py
tmp/: commands_short.txt  isaacsim_setup_to_conda_activate.d.sh
(+586 files in other folders)
